objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>LAT_MX Opportunity</fullName>
        <description>Sales Process for Opportunity for Mexico</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approval pending</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Novo pedido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Padrão</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Mobile Order</fullName>
        </values>
        <values>
            <fullName>Moblie Order Sent To JDE</fullName>
        </values>
        <values>
            <fullName>Novo pedido</fullName>
        </values>
        <values>
            <fullName>Pedido com erro no JDE</fullName>
        </values>
        <values>
            <fullName>Pedido enviado para o JDE</fullName>
        </values>
        <values>
            <fullName>Pedido processado no JDE</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pedido enviado ao JDE</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Mobile Order</fullName>
        </values>
        <values>
            <fullName>Moblie Order Sent To JDE</fullName>
        </values>
        <values>
            <fullName>Pedido cancelado no JDE</fullName>
        </values>
        <values>
            <fullName>Pedido enviado para o JDE</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard_ARG</fullName>
        <description>Standard sales process for Argentina and Uruguay</description>
        <isActive>true</isActive>
        <values>
            <fullName>Mobile Order</fullName>
        </values>
        <values>
            <fullName>Moblie Order Sent To JDE</fullName>
        </values>
        <values>
            <fullName>Novo pedido</fullName>
        </values>
        <values>
            <fullName>Pedido con descuento aprobado</fullName>
        </values>
        <values>
            <fullName>Pedido con descuento en aprobación</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Atraso_de_entrega__c</fullName>
        <formula>if( Data_Entrega_Recalculada__c  &lt; DT_delivery__c , &quot;Entrega atrasada&quot;, &quot;Entrega OK&quot;)</formula>
        <label>Atraso de entrega</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Action__c</fullName>
        <description>U: Update
C: Cancel
I: Insert</description>
        <inlineHelpText>U: Update
C: Cancel
I: Insert</inlineHelpText>
        <label>Código ação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CD_Deposito__c</fullName>
        <label>Deposito de faturamento</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_order_status__c</fullName>
        <label>Código do status do pedido</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_order_status_country__c</fullName>
        <description>Filed to use with workflow rules</description>
        <label>Order status country code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_return__c</fullName>
        <inlineHelpText>0 = Sucesso
1 = Falha</inlineHelpText>
        <label>Código de retorno</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campo_de_formatacao__c</fullName>
        <label>Composição do Preço</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cancelamento_aprovado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo usado pelo processo de aprovação, indica que o cancelamento foi aprovado.</description>
        <inlineHelpText>Campo usado pelo processo de aprovação, indica que o cancelamento foi aprovado.</inlineHelpText>
        <label>Cancelamento aprovado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelar_pedido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Codigo_do_cliente_AN8__c</fullName>
        <formula>Account.Client_code_AN8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código do cliente AN8</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditLimitBalance_AR__c</fullName>
        <label>Available Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS_Message1__c</fullName>
        <label>Mensagem 1 para Nota Fiscal</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Message2__c</fullName>
        <label>Mensagem 2 para Nota Fiscal</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TM_Order__c</fullName>
        <label>Data e hora do pedido</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DT_delivery__c</fullName>
        <label>Data de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Entrega_Calculada__c</fullName>
        <description>Data calculada pela inclusão de itens através do calendário PERNOD. Esta informação é calculada enquanto o pedido não é enviado ao JDE.</description>
        <label>Data entrega sugerida</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Entrega_Recalculada__c</fullName>
        <description>Data calculada pela inclusão de itens através do calendário PERNOD. Esta informação é calculada SEMPRE que os itens são atualizados. Semelhante ao campo &quot;Data Calculada Entrega&quot;.</description>
        <label>Data entrega recalculada</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_hora_cria_o__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data hora criação</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_ultima_alteracao_dos_itens__c</fullName>
        <description>Informa a MAIOR data de alteração dos itens. Serve para basear o workflow baseado em tempo agendar a geração da atividade de 10 dias em backorder.</description>
        <label>Data última alteração dos itens</label>
        <summarizedField>OpportunityLineItem.LastModifiedDate</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Backorder__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Existe_item_em_backorder__c</fullName>
        <description>Identifica que existe ao menos um item do pedido que está em backorder. Este campo é atualizado pelo workflow &quot;Item em back order&quot; do Produto da Oportunidade. Faz-se necessário devido ao acionamento executar o workflow de criação de atividade para a Oportunidade.</description>
        <label>Existe item em backorder</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existe_item_em_backorder_pais__c</fullName>
        <label>Existe item em backorder pais</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <description>Tipo de frete.</description>
        <label>Tipo de frete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIF</fullName>
                    <default>true</default>
                    <label>CIF</label>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>Value 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grupo_de_precos__c</fullName>
        <formula>Account.Price_Group__c</formula>
        <label>Grupo de preços</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integracao_Retorno_JDE__c</fullName>
        <label>Integração Retorno JDE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integracao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integração</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_do_pedido_com_restricao_de_credito__c</fullName>
        <label>Item do pedido com restrição de crédito</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Descricao_do_status__c</field>
            <operation>equals</operation>
            <value>Em Aprovação, Em Aprovação - Falta de Estoque</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LAT_C9QuantityTotal__c</fullName>
        <label>C9 Quantity Total</label>
        <summarizedField>OpportunityLineItem.LAT_C9Quantity__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LAT_CompanyCode__c</fullName>
        <label>LAT_CompanyCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Enviado_a_JDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviado a JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_JDEOrderKey__c</fullName>
        <externalId>true</externalId>
        <label>LAT_Order Key</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_MX_AmountWithTaxes__c</fullName>
        <label>Amount with taxes</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Remover__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LAT_MX_BackorderItems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Items in backorder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_MX_ClientPaymentPeriod__c</fullName>
        <label>Client payment period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CredAndCollExecutiveManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for the approval process. The system completes this field with the manager of the user that was selected in the field LAT_MX_CreditAndCollectionsExecutive__c of the related Account.</description>
        <label>Credit And Collections Executive Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CreditAndCollectionsStatus__c</fullName>
        <formula>IF(
	(RecordType.DeveloperName=&apos;LAT_MX_OPP_HeaderBlocked&apos; ||
	RecordType.DeveloperName=&apos;LAT_MX_OPP_NewOrder&apos; ||
	RecordType.DeveloperName=&apos;LAT_MX_OPP_OrderBlocked&apos;), 
	IF(
		(ISBLANK(NR_order_JDE__c) &amp;&amp; ISBLANK(LAT_MX_RetentionReason__c)),
		&apos;&apos;,
		CASE(LAT_MX_RetentionReason__c,
					&apos;C3&apos;,&apos;Bloqueado por C&amp;C&apos;,
					&apos;C1&apos;,&apos;Bloqueado por excedente limite de credito&apos;,
					&apos;CH&apos;,&apos;Bloqueado por cheque devuelto&apos;,
					&apos;C7&apos;,&apos;Bloqueado por saldos vencidos&apos;,
					&apos;??&apos;,&apos;Bloqueado por no confirmar el cobrable&apos;,
					&apos;&apos;,&apos;Pedido liberado&apos;,
					&apos;&apos;)
	), 
	&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit and Collections Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_LastTotalAmountSentToJDE__c</fullName>
        <description>This field is used by the system to control if the total amount changes when sending the Opportunity to JDE.</description>
        <label>Last Total Amount Sent To JDE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_MX_LogisticsStatus__c</fullName>
        <label>Logistics Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to ship</fullName>
                </value>
                <value>
                    <fullName>Order in assortment</fullName>
                </value>
                <value>
                    <fullName>Order in delivery</fullName>
                </value>
                <value>
                    <fullName>Order billed</fullName>
                </value>
                <value>
                    <fullName>Bill printed</fullName>
                </value>
                <value>
                    <fullName>Order entered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_OppCancellationReason__c</fullName>
        <label>Cancellation reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_OrderNumberCRM__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Order Number CRM</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LAT_MX_OrderPaymentPeriodReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New payment condition applied to the current order</description>
        <label>Order payment period reference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MX New Order, MX Header Blocked, MX Order Blocked</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>PT-CRM-MX</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_OrderPaymentPeriod__c</fullName>
        <description>Text field that stores the payment condition value in case the UDC record is updated or deleted in order to maintain consistency over time</description>
        <label>Order payment period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PaymentPeriodApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment period approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PurchaseOrderSince__c</fullName>
        <label>Purchase Order (Since)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PurchaseOrderUntil__c</fullName>
        <label>Purchase Order (Until)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_RetentionReason__c</fullName>
        <label>Retention reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_RawPriceComponents__c</fullName>
        <label>Raw price components</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_errorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_mobileExternald__c</fullName>
        <externalId>true</externalId>
        <label>MobileExternalId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NR_customer_order__c</fullName>
        <label>Número do pedido do cliente</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NR_order_JDE__c</fullName>
        <externalId>true</externalId>
        <label>Número do pedido do JDE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origem_do_pedido__c</fullName>
        <label>Origem do pedido</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRM</fullName>
                    <default>true</default>
                    <label>CRM</label>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>JDE</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <label>País</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentAccount_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantidade_com_status__c</fullName>
        <label>Quantidade com status</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Codigo_status_numerico__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantidade_total_de_caixas__c</fullName>
        <label>Quantidade total de caixas</label>
        <summarizedField>OpportunityLineItem.Qt_total__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tem_Item_cancelado__c</fullName>
        <label>Tem item cancelado</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Remover__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Valor_total__c</fullName>
        <label>Valor</label>
        <summarizedField>OpportunityLineItem.Preco_total__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AR_Pedidos_CRM</fullName>
        <columns>Origem_do_pedido__c</columns>
        <columns>NR_order_JDE__c</columns>
        <columns>NR_customer_order__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Codigo_do_cliente_AN8__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Valor_total__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Data_Entrega_Recalculada__c</columns>
        <columns>Data_Entrega_Calculada__c</columns>
        <columns>Pais__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pais__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>Origem_do_pedido__c</field>
            <operation>equals</operation>
            <value>CRM</value>
        </filters>
        <label>AR Pedidos CRM</label>
        <language>pt_BR</language>
        <sharedTo>
            <role>AR_Asistente_Cadenas</role>
            <role>AR_Asistente_KAM_Mayoristas</role>
            <role>AR_Creditos_y_Cobranzas</role>
            <role>AR_Director_Comercial</role>
            <role>AR_Director_de_Administraci_n_y_Finanzas</role>
            <role>AR_Director_de_Operaciones</role>
            <role>AR_Director_de_Ventas_Canal_Directo</role>
            <role>AR_Ejecutivo_de_Cuentas_Distribuidores</role>
            <role>AR_Ejecutivo_de_Cuentas_On_Trade</role>
            <role>AR_Gerente_Trade_Marketing</role>
            <role>AR_Gerente_de_Administracion_y_Finanzas</role>
            <role>AR_Gerente_de_Ventas_SPM_e_Interior</role>
            <role>AR_Inteligencia_Comercial</role>
            <role>AR_Jefe_Regional_Centro_y_NOA</role>
            <role>AR_Jefe_Regional_Litoral</role>
            <role>AR_Jefe_Regional_Sur</role>
            <role>AR_Jefe_de_Distribuidores</role>
            <role>AR_Jefe_de_Finanzas</role>
            <role>AR_Jefe_de_Ventas_On_Trade</role>
            <role>AR_KAM_Mayoristas</role>
            <role>AR_KAM_Supermercados</role>
            <role>AR_KAM_Supermercados_JW</role>
            <role>AR_KAM_Supermercados_Jr</role>
            <role>AR_Logistica</role>
            <role>AR_Representante_Centro_NOA</role>
            <role>AR_Representante_Litoral</role>
            <role>AR_Representante_Sur</role>
            <role>AR_Supply_Chain_Manager</role>
            <role>AR_Tesoreria</role>
            <role>AR_Vendedor_Centro_NOA</role>
            <role>AR_Vendedor_Litoral</role>
            <role>AR_Vendedor_Sur</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Pedidos_CRM_EDI_JDE</fullName>
        <columns>Origem_do_pedido__c</columns>
        <columns>NR_order_JDE__c</columns>
        <columns>NR_customer_order__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Codigo_do_cliente_AN8__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Valor_total__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Data_Entrega_Recalculada__c</columns>
        <columns>Data_Entrega_Calculada__c</columns>
        <columns>Pais__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pais__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <label>AR Pedidos CRM-EDI-JDE</label>
        <language>pt_BR</language>
        <sharedTo>
            <role>AR_Asistente_Cadenas</role>
            <role>AR_Asistente_KAM_Mayoristas</role>
            <role>AR_Creditos_y_Cobranzas</role>
            <role>AR_Director_Comercial</role>
            <role>AR_Director_de_Administraci_n_y_Finanzas</role>
            <role>AR_Director_de_Operaciones</role>
            <role>AR_Director_de_Ventas_Canal_Directo</role>
            <role>AR_Ejecutivo_de_Cuentas_Distribuidores</role>
            <role>AR_Ejecutivo_de_Cuentas_On_Trade</role>
            <role>AR_Gerente_Trade_Marketing</role>
            <role>AR_Gerente_de_Administracion_y_Finanzas</role>
            <role>AR_Gerente_de_Ventas_SPM_e_Interior</role>
            <role>AR_Inteligencia_Comercial</role>
            <role>AR_Jefe_Regional_Centro_y_NOA</role>
            <role>AR_Jefe_Regional_Litoral</role>
            <role>AR_Jefe_Regional_Sur</role>
            <role>AR_Jefe_de_Distribuidores</role>
            <role>AR_Jefe_de_Finanzas</role>
            <role>AR_Jefe_de_Ventas_On_Trade</role>
            <role>AR_KAM_Mayoristas</role>
            <role>AR_KAM_Supermercados</role>
            <role>AR_KAM_Supermercados_JW</role>
            <role>AR_KAM_Supermercados_Jr</role>
            <role>AR_Logistica</role>
            <role>AR_Representante_Centro_NOA</role>
            <role>AR_Representante_Litoral</role>
            <role>AR_Representante_Sur</role>
            <role>AR_Supply_Chain_Manager</role>
            <role>AR_Tesoreria</role>
            <role>AR_Vendedor_Centro_NOA</role>
            <role>AR_Vendedor_Litoral</role>
            <role>AR_Vendedor_Sur</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Pedidos_Cancelados_en_JDE</fullName>
        <columns>Origem_do_pedido__c</columns>
        <columns>NR_order_JDE__c</columns>
        <columns>NR_customer_order__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Codigo_do_cliente_AN8__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Valor_total__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Data_Entrega_Recalculada__c</columns>
        <columns>Data_Entrega_Calculada__c</columns>
        <columns>Pais__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pais__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Pedido cancelado no JDE</value>
        </filters>
        <label>AR-Pedidos Cancelados en JDE</label>
        <language>pt_BR</language>
        <sharedTo>
            <role>ARG_Gerente_General</role>
            <role>AR_Asistente_Cadenas</role>
            <role>AR_Asistente_KAM_Mayoristas</role>
            <role>AR_Creditos_y_Cobranzas</role>
            <role>AR_Director_Comercial</role>
            <role>AR_Director_de_Administraci_n_y_Finanzas</role>
            <role>AR_Director_de_Operaciones</role>
            <role>AR_Director_de_Ventas_Canal_Directo</role>
            <role>AR_Ejecutivo_de_Cuentas_Distribuidores</role>
            <role>AR_Ejecutivo_de_Cuentas_On_Trade</role>
            <role>AR_Gerente_Trade_Marketing</role>
            <role>AR_Gerente_de_Administracion_y_Finanzas</role>
            <role>AR_Gerente_de_Ventas_SPM_e_Interior</role>
            <role>AR_Inteligencia_Comercial</role>
            <role>AR_Jefe_Regional_Centro_y_NOA</role>
            <role>AR_Jefe_Regional_Litoral</role>
            <role>AR_Jefe_Regional_Sur</role>
            <role>AR_Jefe_de_Distribuidores</role>
            <role>AR_Jefe_de_Finanzas</role>
            <role>AR_Jefe_de_Ventas_On_Trade</role>
            <role>AR_KAM_Mayoristas</role>
            <role>AR_KAM_Supermercados</role>
            <role>AR_KAM_Supermercados_JW</role>
            <role>AR_KAM_Supermercados_Jr</role>
            <role>AR_Logistica</role>
            <role>AR_Representante_Centro_NOA</role>
            <role>AR_Representante_Litoral</role>
            <role>AR_Representante_Sur</role>
            <role>AR_Supply_Chain_Manager</role>
            <role>AR_Tesoreria</role>
            <role>AR_Vendedor_Centro_NOA</role>
            <role>AR_Vendedor_Litoral</role>
            <role>AR_Vendedor_Sur</role>
        </sharedTo>
    </listViews>
</CustomObject>